[tool.poetry]
name = "multimedia-systems"
version = "0.1.0"
description = "Solutions of the first laboratory exercise for the couse Multimedia Systems"
authors = ["Aleksandar Ivanovski <aleksandar.ivanovski123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
